[package]
name = "destiny-item-helper"
version = "0.1.0"
authors = ["CementTheBlock <cement122293@gmail.com>"]
edition = "2018"
license = "MIT"
repository="https://github.com/CementTheBlock/destiny-item-helper"
description="Backend for a webapp that will allow you to view and edit your destiny 2 items"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
